# lux-desktop-cyberdriver

./: .gitignore  CYBERDRIVER_PARITY.md  README.md  bump-version.mjs  lux-desktop-cyberdriver.code-workspace  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: build-and-release.yml  build-test.yml  release.yml
asyncapi/: asyncapi.yaml  index.js  package.json
src-tauri/: .rustfmt.toml  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/amyuni_driver/: License.txt  idd_instructions.txt
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/automation/: event.rs  mod.rs  session.rs  state.rs  types.rs
src-tauri/src/commands/: automation.rs  cyberdriver.rs  mod.rs  settings.rs  window.rs
src-tauri/src/cyberdriver/: api.rs  black_screen.rs  config.rs  diagnostics.rs  headless.rs  input.rs  keepalive.rs  logger.rs  mod.rs  tunnel.rs  update.rs  windows.rs
src-tauri/windows/: main.wxs
src-tauri/windows/fragments/: service.wxs
src/common/: image-process.ts  index.ts  types.ts  utils.ts
src/coord-capture/: App.tsx  index.tsx
src/floating/: App.tsx  index.tsx
src/image-preview/: App.tsx
src/main/: App.tsx  index.tsx  styles.css  useAutomation.ts
src/main/components/: AgentLogo.module.less  AgentLogo.tsx  ArrowIcon.tsx  Dropdown.tsx  Instruction.tsx  InstructionEditor.module.less  InstructionEditor.tsx  ModeSelector.tsx  Options.tsx  OptionsIcon.tsx  RunningIcon.tsx  SendIcon.module.less  SendIcon.tsx  StopIcon.module.less  StopIcon.tsx  Timeline.tsx  WorkflowLabel.tsx  index.ts
src/main/utils/: index.ts  mode.ts  workflow.tsx
windows/: coord-capture.html  floating.html  image-preview.html  main.html
