[package]
name = "lux-desktop"
version = "0.1.1"
description = "A Tauri App"
authors = ["A1phaN"]
edition = "2024"

[lib]
name = "lux_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
enigo = "0.6.1"
futures-util = "0.3.31"
image = { version = "0.25", features = ["jpeg", "png"] }
rust_socketio = { git = "https://github.com/agi-agent/rust-socketio", branch = "ack-server-request", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1.48.0", features = ["full"] }
xcap = "0.7.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
