[package]
name = "cyberdriver"
version = "0.0.40"
description = "Cyberdriver Desktop"
authors = ["Cyberdriver"]
edition = "2024"

[lib]
name = "cyberdriver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.4.1"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
device_query = "1.1.3"
dirs = "5.0.1"
enigo = "0.6.1"
futures-util = "0.3.31"
http = "1.3.1"
image = { version = "0.25", features = ["jpeg", "png"] }
rand = "0.9.2"
rust_socketio = { git = "https://github.com/agi-agent/rust-socketio", branch = "ack-server-request", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sysinfo = "0.33.1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7.16"
tungstenite = "0.26.2"
uuid = { version = "1.18.1", features = ["v4"] }
xcap = "0.7.1"

[features]
default = []
screencapturekit = ["dep:screencapturekit"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1", features = ["macos_14_0"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_System_Console",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_ProcessStatus"
] }
